--- a/html-YL2.html
+++ b/html-YL2.html
@@ -2,7 +2,7 @@
 
 <html>
 
-	<head> <title>Koerad</title> </head>
+	<head> <title>Ülesanne 2.1</title> </head>
 	
 	<table>
 	<caption>Koerad</caption>
@@ -31,6 +31,21 @@
 			<td>11</td>
 			<td>Afghanistani hurt</td>
 		</tr>
+	</table>
+	
+	<style>
+	table, th, td {
+		border: 1px solid black;
+	}
+	</style>
+	
+	<table>
+		<tr>
+		
+			<td colspan="2">&nbsp;</td>
+		
+		</tr>
+		
 	</table>
 
 </html>
