--- a/html-YL2-2-2.html
+++ b/html-YL2-2-2.html
@@ -4,7 +4,7 @@
 
 	<head> <title>Ülesanne 2.2.2</title> </head>
 	
-	<form action="html-YL2-2-2.html" method="POST" >
+	<form method="post" >
 	
 		<textarea name="tekst" rows="5" cols="30" > </textarea>
 		
