--- a/html-YL2.html
+++ b/html-YL2.html
@@ -39,13 +39,29 @@
 	}
 	</style>
 	
+	<body>
+		&nbsp; <br>
+		&nbsp; <br>
+		&nbsp;
+	</body>
+	
 	<table>
 		<tr>
-		
-			<td colspan="2">&nbsp;</td>
-		
+			<td>
+				&nbsp; <br>
+				&nbsp;
+			</td>
+			<td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
 		</tr>
-		
+		<tr>
+			<td>
+				&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>
+				&nbsp; <br>
+				&nbsp; <br>
+				&nbsp; <br>
+				&nbsp;
+			</td>
+		</tr>
 	</table>
 
 </html>
