--- a/firsthtml.html
+++ b/firsthtml.html
@@ -57,11 +57,37 @@
 		  Laisklooma kogupikkus on tavaliselt 50 kuni 60 cm ning, sõltuvalt liigist, kaaluvad nad umbes 3,6 - 7,7 kg.
 		</p>
 	</div>
-
-	<img src="http://assets.worldwildlife.org/photos/6518/images/story_full_width/iStock_000011145477Large_mini_(1).jpg?1394632882" alt="Laiskloom" height="300" width="450" />
+	
+	<div>
+	  <h3>Galerii</h3>
+	  <table>
+	    <tr>
+		  <td>
+			<a href="Pilt1HTML.html">
+			  <img src="thumb\thumb1.jpg" alt="Smiling sloth" />
+			</a>
+		  </td>
+		  <td>
+			<a href="Pilt2HTML.html">
+			  <img src="thumb\thumb2.jpg" alt="Sloth eating a leaf" />
+			</a>
+		  </td>
+		  <td>
+			<a href="Pilt3HTML.html">
+			  <img src="thumb\thumb3.jpg" alt="Sloth hugging a tree" />
+			</a>
+		  </td>
+		  <td>
+			<a href="Pilt4HTML.html">
+			  <img src="thumb\thumb4.jpg" alt="Ghillie sloth" />
+			</a>
+		  </td>
+		</tr>
+	  </table>
+	</div>
 
 	<p>
-	  <a href="http://validator.w3.org/check?uri=http://enos.itcollege.ee/~ekoll/myhtml.html">
+	  <a href="http://validator.w3.org/check?uri=http://enos.itcollege.ee/~ekoll/firsthtml.html">
 		<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
 	  </a>
 	</p>
