--- a/firsthtml.html
+++ b/firsthtml.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Tere külaline!</title> 
+    <title>Tere külaline!</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
 
   <body>
@@ -64,33 +65,36 @@
 	    <tr>
 		  <td>
 			<a href="Pilt1HTML.html">
-			  <img src="thumb\thumb1.jpg" alt="Smiling sloth" />
+			  <img src="thumb/thumb1.jpg" alt="Smiling sloth" />
 			</a>
 		  </td>
 		  <td>
 			<a href="Pilt2HTML.html">
-			  <img src="thumb\thumb2.jpg" alt="Sloth eating a leaf" />
+			  <img src="thumb/thumb2.jpg" alt="Sloth eating a leaf" />
 			</a>
 		  </td>
 		  <td>
 			<a href="Pilt3HTML.html">
-			  <img src="thumb\thumb3.jpg" alt="Sloth hugging a tree" />
+			  <img src="thumb/thumb3.jpg" alt="Sloth hugging a tree" />
 			</a>
 		  </td>
 		  <td>
 			<a href="Pilt4HTML.html">
-			  <img src="thumb\thumb4.jpg" alt="Ghillie sloth" />
+			  <img src="thumb/thumb4.jpg" alt="Ghillie sloth" />
 			</a>
 		  </td>
 		</tr>
 	  </table>
 	</div>
 
-	<p>
+	<div>
 	  <a href="http://validator.w3.org/check?uri=http://enos.itcollege.ee/~ekoll/firsthtml.html">
 		<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
 	  </a>
-	</p>
+	  <a href="http://jigsaw.w3.org/css-validator/check/firsthtml.html">
+		<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+	  </a>
+	</div>
   
   </body>
 
