fixed errors, updated files

--- a/css-bot.html
+++ b/css-bot.html
@@ -4,13 +4,26 @@
 	<meta charset="utf-8" />
 	<title>Praktikum 03 - selektorite ülesanne</title>
 	<style type="text/css">
-	/*  SIIN KIRJELDADA SELEKTORID NING ELEMENDIS NÕUTUD STIIL */
+	p {color: red;}
 	div {
+		width: 300px;
 		text-align: center;
 	}
-	p {color: red;}
-	span {font-size: 30px;}
-	
+	li {
+		width: 90%;
+		background-color: #c0c0c0;
+		list-style: none;
+	}
+	div > p {background-color: gray;}
+	#keha {background-color: gray;}
+	#pea span {
+		background-color: #c0c0c0;
+		font-size: 30px;
+	}
+	.jalg {
+		background-color: gray;
+		color: white;
+	}
 	</style>
 </head>
 <body>
