--- a/firsthtml.html
+++ b/firsthtml.html
@@ -86,14 +86,14 @@
 		</tr>
 	  </table>
 	</div>
-
+	<br>
+	<br>
+	<br>
 	<div>
 	  <a href="http://validator.w3.org/check?uri=http://enos.itcollege.ee/~ekoll/firsthtml.html">
-		<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
-	  </a>
-	  <a href="http://jigsaw.w3.org/css-validator/check/firsthtml.html">
-		<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
-	  </a>
+		<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+	  <a href="http://jigsaw.w3.org/css-validator/check/http://enos.itcollege.ee/~ekoll/firsthtml.html">
+		<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
 	</div>
   
   </body>
