--- a/abacus.html
+++ b/abacus.html
@@ -6,16 +6,26 @@
     <title>Abacus</title>
 	<style>
 	  .bead {
-	    height: 50px;
-		width: 50px;
+	    height: 64px;
+		width: 64px;
 		background-color: #cc0000;
 		border-radius: 50%;
 		box-shadow: 0px -11px 23px -10px black inset;
 		float: left;
+		margin-top: -32px
 	  }
-	  .row {
+	  #row {
 	    clear: both;
-		border: solid gray;
+		border: 6px solid #bfbfbf;
+		margin-top: 64px
+	  }
+	  #raam {
+	    border: 16px solid #1a1a1a;
+		border-style: outset;
+		padding-bottom: 64px;
+	  }
+	  .rightbead {
+	    float: right;
 	  }
 	</style>
   </head>
@@ -27,24 +37,48 @@
 	    <div class="bead"></div>
 	    <div class="bead"></div>
 	    <div class="bead"></div>
+		<div class="bead"></div>
+	    <div class="bead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
 	  </div>
 	  <div id="row">
 	    <div class="bead"></div>
 	    <div class="bead"></div>
 	    <div class="bead"></div>
 	    <div class="bead"></div>
+		<div class="bead"></div>
+	    <div class="bead"></div>
+	    <div class="bead"></div>
+	    <div class="bead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
 	  </div>
 	  <div id="row">
 	    <div class="bead"></div>
 	    <div class="bead"></div>
 	    <div class="bead"></div>
-	    <div class="bead"></div>
+	    <div class="bead rightbead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
 	  </div>
 	  <div id="row">
 	    <div class="bead"></div>
-	    <div class="bead"></div>
-	    <div class="bead"></div>
-	    <div class="bead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
+		<div class="bead rightbead"></div>
+	    <div class="bead rightbead"></div>
 	  </div>
 	</div>
   </body>
