added Javascript file

--- a/DuckHunt.html
+++ b/DuckHunt.html
@@ -19,6 +19,12 @@
 	  <div class="circle"></div>
 	  
 	</div>
+	
+	<script>
+	  window.onload = function() {
+	  
+	  }
+	</script>
   </body>
 
 </html>
