--- a/DuckHunt.html
+++ b/DuckHunt.html
@@ -23,10 +23,10 @@
 	<script>
 	  window.onload = function() {
 		var target = document.getElementById('target');
-		target.onclick=function(){
+		target.onclick = function(){
 		
-		  target.style.left = Math.round( Math.random() * 700 ) + "px";
-		  target.style.top = Math.round( 350 + ( Math.random() * 100 ) ) + "px";
+		  target.style.left = Math.floor( Math.random() * 700 ) + "px";
+		  target.style.top = Math.floor( 350 + ( Math.random() * 100 ) ) + "px";
 		
 		}
 	  }
