--- a/abacus.html
+++ b/abacus.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Abacus</title>
-	<script>src="abacus.js"</script>
+	<script src="abacus.js" type="text/javascript"></script>
 	<style>
 	  .bead {
 	    height: 64px;
