--- a/loop.html
+++ b/loop.html
@@ -9,10 +9,31 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script type="text/javascript">
 		
-		$(document).ready( function() {
+		$( document ).ready( function() {
 			
+			$("ul li").first().addClass("active");
 			
+			$("#next").click( function() {
+				
+				if ( $(".active").is(":last-child") ) {
+					$("ul li").removeClass();
+					$("ul li").first().addClass("active");
+				} else {
+					$(".active").next().addClass("active");
+					$(".active").prev().removeClass();
+				}
+			});
 			
+			$("#prev").click( function() {
+			
+				if ( $(".active").is(":first-child") ) {
+					$("ul li").removeClass();
+					$("ul li").last().addClass("active");
+				} else {
+					$(".active").prev().addClass("active");
+					$(".active").next().removeClass();
+				}
+			});	
 		});
 		
 	</script>
