created basic layout

--- a/Project - online portfolio/portfolio.html
+++ b/Project - online portfolio/portfolio.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+    <title>TEST Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	</head>
+		
+	<body>
 
-  <head>
-    <meta charset="utf-8" />
-    <title>TIITEL</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+		<header>
+			<h1>TEST Portfolio</h1>
+		</header>
+ 
+		<div class="components">
+ 
+			<div id="sidebar">
+				<ul>
+					<li><a href="">Avaleht</a></li>
+					<li><a href="">Galerii</a></li>
+					<li><a href="">Test1</a></li>
+					<li><a href="">Test2</a></li>
+					<li><a href="">Kontakt</a></li>
+				</ul>
+			</div>
+		
+				<article>
+					<h1>Lorem Ipsum Dolor</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum arcu augue, quis fermentum felis aliquet a. Vivamus cursus erat quis enim ullamcorper, ac pulvinar nunc elementum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer sed lectus eu neque convallis consequat. Fusce suscipit cursus nulla. Phasellus non felis ut tortor cursus blandit vel non enim. Phasellus nec posuere metus. Nulla ac pretium felis. Curabitur consectetur eros orci, eu ultrices nibh ornare eu. Cras ut dolor maximus, feugiat enim ac, dapibus lacus.
+						Donec non vestibulum neque. Proin convallis augue eget dui sollicitudin, rutrum lobortis nulla suscipit. Nullam vel ante laoreet, blandit tortor at, placerat velit. Vestibulum rutrum, metus convallis sagittis venenatis, tortor lectus ornare velit, vel tempor neque erat vel massa. Donec condimentum nisl orci, eget aliquet dolor congue ac. Maecenas rhoncus risus metus, vitae viverra justo egestas sed. Nulla ultrices scelerisque tristique. Ut tincidunt erat non nulla lobortis pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin iaculis ullamcorper velit vitae porta. Aliquam et eros bibendum, vehicula diam lacinia, venenatis ipsum. Donec neque urna, viverra nec quam id, fringilla interdum odio. Nullam sagittis euismod diam, sit amet viverra lacus facilisis non.
+						Sed bibendum, justo ut eleifend aliquet, elit odio imperdiet nibh, sit amet ultricies est dui nec ipsum. Nulla tempus placerat sodales. Cras porttitor augue eu mauris eleifend rutrum. Ut rhoncus a dolor a luctus. Pellentesque finibus, nisl quis varius mattis, nulla turpis convallis mauris, sed faucibus sem mauris semper diam. Etiam vel augue vitae tortor placerat condimentum nec at lorem. Fusce vel neque nec lacus dictum congue. Fusce efficitur non quam non varius. Nunc ut erat sed nulla maximus luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris blandit dictum eleifend. Donec lobortis volutpat tellus non suscipit. Etiam vitae mi vitae elit sodales porta eu vel felis.
+						Praesent lacus nisl, condimentum vel accumsan id, laoreet pulvinar arcu. Pellentesque a dolor a ligula cursus fringilla ac eu nisi. In vulputate vel dolor eu rhoncus. Duis nec mi mi. Aliquam vestibulum dolor a augue euismod dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec nibh turpis, tempus imperdiet quam et, cursus iaculis augue. Phasellus posuere dolor in mi elementum euismod. Nunc placerat ipsum vel tristique convallis. Quisque eget ipsum vitae justo blandit tempus at eget arcu. Pellentesque volutpat mauris ac mattis ultrices. Vestibulum ut enim quis nisl suscipit sodales sed in nulla. Etiam ultricies dapibus faucibus. Morbi rhoncus hendrerit lacus, vel vehicula mi dignissim et. Quisque blandit massa ut auctor maximus. In venenatis magna sit amet varius aliquet.
+						Suspendisse ut suscipit urna. Praesent tortor felis, rutrum at tortor non, sodales iaculis nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vitae orci justo. Proin euismod porta ex consectetur malesuada. Nam tristique risus ac lorem scelerisque fringilla. Integer facilisis bibendum interdum. Donec sollicitudin sem non neque imperdiet aliquam. Nam diam purus, tristique ut arcu eget, suscipit aliquam magna. Phasellus erat ligula, malesuada ut pulvinar sit amet, venenatis non magna. In nisl elit, varius at metus vitae, scelerisque consectetur orci. Morbi tempor metus lorem, nec pharetra dolor porta et. 
+					</p>
+				</article>
 
-  <body>
-	
-  </body>
-
+		</div>
+		<footer>FOOTER HERE 2017</footer>
+	</body>
 </html>
